--- a/winserver-heat.yml
+++ b/winserver-heat.yml
@@ -62,12 +62,13 @@ parameters:
     description: Windows Server image
 
 resources:
-
-  winServerData:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      config: |
-              'X'*10000|out-file C:\lotsofx.txt
+  # doesn't work. For type Rackspace::Cloud::WinServer, user_data
+  # must NOT be OS::Heat::SoftwareConfig type
+  # winServerData:
+  #   type: OS::Heat::SoftwareConfig
+  #   properties:
+  #     config: |
+  #             'X'*10000|out-file C:\lotsofx.txt
 
   winServerPass:
     type: OS::Heat::RandomString
@@ -79,7 +80,6 @@ resources:
       size: 50
       volume_type: SSD
       image: { get_param: winServerImage }
-
 
   winServerInstance:
     type: Rackspace::Cloud::WinServer
@@ -96,7 +96,8 @@ resources:
       networks:
         - network: '00000000-0000-0000-0000-000000000000'
         - network: '11111111-1111-1111-1111-111111111111'
-      user_data: { get_resource: winServerData }
+      user_data: |
+                  echo "hello"  >> C:\myhosts.txt
 
 outputs:
 
